--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
-    "sweetalert2": "11.10.8",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zone.js": "^0.14.4"
   },
   "engines": {
     "node": "18.13",
