--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "moment",
+              "sweetalert2"
+            ],
             "outputPath": "dist/frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -26,7 +30,9 @@
               "src/styles.css"
             ],
             "scripts": [
-            ]
+              "node_modules/moment/moment.js",
+              "node_modules/sweetalert2/dist/sweetalert2.js"
+            ]            
           },
           "configurations": {
             "production": {
