--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot",
-    "start": "node server.js"
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -16,6 +14,7 @@
     "@angular/cdk": "^16.0.2",
     "@angular/common": "^17.1.3",
     "@angular/compiler": "^17.1.3",
+    "@angular/cli": "~17.1.3",
     "@angular/core": "^17.1.3",
     "@angular/forms": "^17.1.3",
     "@angular/material": "^16.0.2",
@@ -39,7 +38,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.2",
-    "@angular/cli": "~17.1.3",
     "@angular/compiler-cli": "^17.1.3",
     "@types/body-parser": "^1.19.5",
     "@types/jasmine": "~4.3.0",
