--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -12,9 +12,9 @@
   "dependencies": {
     "@angular/animations": "^17.1.3",
     "@angular/cdk": "^16.0.2",
+    "@angular/cli": "~17.1.3",
     "@angular/common": "^17.1.3",
     "@angular/compiler": "^17.1.3",
-    "@angular/cli": "~17.1.3",
     "@angular/core": "^17.1.3",
     "@angular/forms": "^17.1.3",
     "@angular/material": "^16.0.2",
@@ -24,6 +24,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "body-parser": "^1.20.2",
     "chart.js": "^4.4.2",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
