--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,14 +7,14 @@
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "https://app-frontendprueba-f346984aaa03.herokuapp.com/"
+      "url": "https://app-frontendprueba-f346984aaa03.herokuapp.com"
     },
     {
       "name": "ng test",
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: test",
-      "url": "https://app-frontendprueba-f346984aaa03.herokuapp.com/"
+      "url": "https://app-frontendprueba-f346984aaa03.herokuapp.com/debug.html"
     }
   ]
 }
